assets/bl-styling.css
/* Building Blocks Theme Sections Styling */

/* ----- BUILDING BLOCKS CSS ----- */
/* TEXT CONTAINER */
.bl-text-container {
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* DESKTOP SECTION HEIGHT */
@media only screen and (min-width: 768px){
    .height--150 {
      height: 150px;
    }
  
    .height--250 {
      height: 250px;
    }
  
    .height--350 {
      height: 350px;
    }
  
    .height--450 {
      height: 450px;
    }
  
    .height--550 {
      height: 550px;
    }
  
    .height--650 {
      height: 650px;
    }
  
    .height--full {
      height: 100vh;
    }
  
    .height--1-3 {
      height: 33vh;
    }
  
    .height--1-2 {
      height: 50vh;
    }
  
    .height--2-3 {
      height: 66vh;
    }
  
    .height--3-4 {
      height: 75vh;
    }
  }
  
  @media only screen and (max-width: 768px){
    .mb-height--150 {
      height: 150px;
    }
  
    .mb-height--250 {
      height: 250px;
    }
  
    .mb-height--350 {
      height: 350px;
    }
  
    .mb-height--450 {
      height: 450px;
    }
  
    .mb-height--550 {
      height: 550px;
    }
  
    .mb-height--650 {
      height: 650px;
    }
  
    .mb-height--full {
      height: 100vh;
    }
  
    .mb-height--1-3 {
      height: 33vh;
    }
  
    .mb-height--1-2 {
      height: 50vh;
    }
  
    .mb-height--2-3 {
      height: 66vh;
    }
  
    .mb-height--3-4 {
      height: 75vh;
    }
  }
  
    /* SPACE BLOCK */
    .bl-dt-space {
      display: block !important;
    }
    .bl-mb-space {
      display: none !important;
    }
    @media only screen and (max-width: 768px) {
      .bl-dt-space {
        display: none !important;
      }
      .bl-mb-space {
        display: block !important;
      }
    }
  
    /* BUTTON */
    .bl-btn {
      display: inline-block;
      text-decoration: none;
      transition-duration: 0.4s;
    }
  
    .bl-btn:hover {
      opacity: 0.7;
    }
  
    /* BUTTON STYLES */
    .bl-btn--full-w-tall {
      text-align: center !important;
      padding: 12px 12px;
      width: 100%;
      max-width: 600px;
    }
    .bl-btn--full-w-medium {
      text-align: center !important;
      padding: 6px 6px;
      width: 100%;
      max-width: 600px;
    }
    .bl-btn--full-w-short {
      text-align: center !important;
      padding: 0px 4px;
      width: 100%;
      max-width: 600px;
    }
  
    .bl-btn--xl {
      padding: 12px 32px;
    }
    @media only screen and (max-width: 768px) {
      .bl-btn--xl {
        padding: 10px 28px;
      }
    }
    .bl-btn--lg {
      padding: 10px 28px;
    }
    @media only screen and (max-width: 768px) {
      .bl-btn--lg {
        padding: 8px 24px;
      }
    }
    .bl-btn--md {
      padding: 8px 24px;
    }
    @media only screen and (max-width: 768px) {
      .bl-btn--md {
        padding: 6px 20px;
      }
    }
    .bl-btn--sm {
      padding: 6px 20px;
    }
    @media only screen and (max-width: 768px) {
      .bl-btn--sm {
        padding: 4px 16px;
      }
    }
    .bl-btn--xs {
      padding: 4px 16px;
    }
    @media only screen and (max-width: 768px) {
      .bl-btn--xs {
        padding: 2px 12px;
      }
    }

    .bl-btn--underline {
        text-decoration: underline;
        background-color: transparent !important;
        border-width: 0px !important;
    }
  
    /* DISPLAY SETTINGS */
    /* .bl-hide-none {} */
    @media only screen and (min-width: 768px) {
      .bl-hide-desktop {
        display: none !important;
      }
    }
    @media only screen and (max-width: 768px) {
      .bl-hide-mobile {
        display: none !important;
      }
    }
  
  
  /* ----- BUILDING BLOCKS TAILWIND CSS ----- */
  .bl-m-auto {
    margin: auto
  }
  
  .bl-block {
    display: block
  }
  
  .bl-grid {
    display: grid
  }
  
  .bl-w-full {
    width: 100%
  }
  
  .bl-px-4 {
    padding-left: 1rem;
    padding-right: 1rem
  }
  
  .bl-text-left {
    text-align: left
  }
  
  .bl-text-center {
    text-align: center
  }
  
  .bl-opacity-25 {
    opacity: 0.25
  }

